# clicraft

./: .gitignore  INSTALL  LICENSE  Makefile  Makefile.in  Makefile.inc  README  README.asciidoc  TODO  configure.ac  configure.in
doc/: Makefile.inc  clicraft-actions.5.txt  clicraft-examples.1.txt  clicraft.1.txt  clicraft.conf.5.txt  contribute.txt  footer.txt  index.txt  install.txt
etc/: clicraft-defaults.conf
etc/action.d/: backup.sh  cmd.sh  console.sh  init.sh  restart.sh  start.sh  status.sh  stop.sh  update.sh
lib/clicraft/: defaults.sh  functions.sh
scripts/: Makefile.in  Makefile.inc  bash_completion.in  bash_completion.sh  cron.in  end-blocks.conf  explore.sh  log4j2.xml  logrotate.in  map.sh  prune.sh
src/: Makefile.in  Makefile.inc
src/etc/: clicraft-defaults.conf  clicraft-defaults.conf.in  clicraft-starmade.conf.in  nether-blocks.conf  overworld-blocks.conf
src/etc/action.d/: action-override.sh.example  action.sh.example  backup.sh  backup.sh.example  blocks.sh.example  cmd.sh  cmd.sh.example  console.sh  explore.sh.example  maint.sh.example  map.sh.example  pregen.sh.example  prune.sh.example  restart.sh  restart.sh.example  sh.sh.example  status.sh  sync.sh.example  update.sh
src/etc/redb/: bukkit.tab  minecraft.tab  starmade.tab
src/lib/: bootstrap.sh  defaults.sh  defaults.sh.in  functions.sh  screen.sh  tmux.sh  validate.sh
src/lib/action.d/: cmd.sh  console.sh  disable.sh  dl.sh  edit.sh  enable.sh  help.sh  init.sh  redb.sh  restart.sh  sh.sh  start.sh  status.sh  stop.sh  update.sh  version.sh
src/lib/clicraft/: defaults.sh
util/: check-docs.sh
