#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([clicraft], [0.0.3], [https://github.com/DMBuce/clicraft/issues], [clicraft], [https://github.com/DMBuce/clicraft])

dnl BEGIN BUCE'S STUFF

dnl END BUCE'S STUFF

# Checks for programs.
AC_PROG_INSTALL
AC_PROG_LN_S

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT(, echo timestamp > stamp-h)
